<resources>
    <string name="app_name">ARPDevice</string>
    <string name="exit_app">press again to exit</string>
    <string name="ok">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="load_error">load failed,please try again</string>
    <string name="loading">Loading...</string>
    <string name="handling">Operation is in process,please wait</string>
    <string name="network_error">Network error</string>
    <string name="load_data_error">Failed to get data, please try again</string>
    <string name="notify_running">ARPDevice is running</string>
    <string name="input_passwd_tip">Please input wallet password</string>
    <string name="input_passwd_error">Wallet password error,please try again</string>
    <string name="check_init">Device is initializing</string>
    <string name="check_device_error">Sorry, there is something wrong with your device.</string>
    <string name="check_failed_reason">Failed for:</string>
    <string name="check_fail_os">Android os 7.0+ is required.</string>
    <string name="check_fail_disk">More than 1G disk capability is required.</string>
    <string name="check_USB">Checking usb debugging</string>
    <string name="check_fail_usb">Please %s and %s</string>
    <string name="check_highlight_developer_options">open developer options</string>
    <string name="check_highlight_USB_debug">USB debug</string>
    <string name="check_highlight_adb_install_need_confirm">\nClose option: Monitor apps installed by ADB</string>
    <string name="check_highlight_allow_charging_adb">\nOpen option: Allow ADB debugging in charge only mode</string>
    <string name="check_tcp">Checking activation</string>
    <string name="check_fail_tcp">Please connect your device with pc by usb\nand follow the guild of ARP-tool to activate your device\nyou need to reactive when your device reboot.</string>
    <string name="download_tcp_tool">download from: http://t.cn/E7Ag0s9</string>
    <string name="check_authorization">Checking authorization</string>
    <string name="check_authorization_tip">1. RSA key:\n%s\n2. %s from this computer\n3. click ok</string>
    <string name="check_always_allow">Check always allow</string>
    <string name="check_btn_reset_author">Reauthorize</string>
    <string name="check_touch_safe">Checking security settings</string>
    <string name="check_fail_adb_safe">Please open %s</string>
    <string name="check_highlight_safe">USB debugging(Security settings)</string>
    <string name="check_touch">Checking hardware</string>
    <string name="check_fail_touch">Sorry, your device can not offer the arp service\nPlease look forward the future version</string>
    <string name="check_installation">Installing via USB</string>
    <string name="check_installation_tip">Checking installation\nAn small App will be installed and uninstalled\nPlease press %s</string>
    <string name="check_highlight_install">Install</string>
    <string name="check_fail_installation">Please open %s</string>
    <string name="check_highlight_installation">install via USB</string>
    <string name="check_network">Checking network environment</string>
    <string name="check_network_error">Network error\nPlease open UPNP on your WiFi router</string>
    <string name="check_again">Check again</string>
    <string name="check_success">Checked success</string>
    <string name="check_success_tip">Initialized</string>
    <string name="check_failed">Check failed,please try again</string>
    <string name="check_failed_action">Try again</string>
    <string name="check_btn_adb">Go to developer options</string>
    <string name="check_btn_quit">quit</string>
    <string name="check_fail_adb">Please open the Developer options and USB Debug</string>
    <string name="check_fail_stay_on">Please open Developer options and Stay awake option</string>
    <string name="check_fail_adb_exception">Please setup adb develop mode</string>
    <string name="check_highlight">Checked</string>
    <string name="import_wallet">Import wallet</string>
    <string name="import_wallet_tip">Enter private key, mind the capitals</string>
    <string name="import_wallet_tip2">Every wallet can bind only one device</string>
    <string name="private_key">Enter private key</string>
    <string name="password_setting">Set password (at least 8 character)</string>
    <string name="wallet_password">Password</string>
    <string name="confirmed_password">Confirm password</string>
    <string name="start_to_import">Import</string>
    <string name="complete_info">Please complete the information</string>
    <string name="invalid_private_key">Invalid private key specified</string>
    <string name="use_more_characters_password">Password must be 8 or more characters</string>
    <string name="inconsistent_password">Inconsistent password</string>
    <string name="importing">Importing</string>
    <string name="import_success">Import success</string>
    <string name="import_failed">Import failed</string>
    <string name="home">Home</string>
    <string name="my_wallet">My wallet</string>
    <string name="order_price">Order price</string>
    <string name="my_earnings">My Earnings</string>
    <string name="my_unexchanged">%.2fARP Unexchanged</string>
    <string name="start_ordering">Start ordering</string>
    <string name="order_price_message">The lower the unit price, the easier it is to receive the order. The actual income is subject to the order price.</string>
    <string name="order_price_format">%dARP/h</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="less">Less</string>
    <string name="more">More</string>
    <string name="no_bind_miner">No bind miner</string>
    <string name="no_charging">Please make sure your device is charging</string>
    <string name="no_port_forward">Please make sure open upnp function</string>
    <string name="no_wifi">Please use in WIFI</string>
    <string name="invalid_miner">The miner you have bound has stopped service, please bind the new miner</string>
    <string name="binding_miner">During binding miner, can not start receiving order</string>
    <string name="unbinding_miner">During unbinding miner, can not start receiving order</string>
    <string name="amount_insufficient">The authorized remaining amount is insufficient and cannot receive the order. Please replace the miner and try again.</string>
    <string name="account_not_exist">The account does not exist, please re-import the wallet</string>
    <string name="start_ordering_failed">Start ordering failed, please try again later</string>
    <string name="wallet_addr">Address</string>
    <string name="ARP_balance">ARP account</string>
    <string name="ETH_balance">ETH account</string>
    <string name="deposit_balance">Deposit balance</string>
    <string name="float_arp_token">%.2f ARP</string>
    <string name="loading_balance">loading</string>
    <string name="reset_wallet">Reset wallet</string>
    <string name="withdraw">Withdraw</string>
    <string name="get_balance_error_msg">Error occurred when getting balance</string>
    <string name="withdraw_success">Withdraw success</string>
    <string name="withdraw_failed">Withdraw failed</string>
    <string name="unexchange_tip_changing_wallet">You have accumulated %.2f ARP, please exchange your promise. if you cancel the exchange, the promise will become invalid automatically</string>
    <string name="tip_changing_wallet">You have accumulated some ARP. please make sure the promise have been exchanged, or it would be invalid after wallet changed.</string>
    <string name="exchange_change_wallet_ignore">Go on change wallet</string>
    <string name="withdraw_title">Withdraw all deposit?</string>
    <string name="withdraw_tip_lock">Need to unlock before you can get the deposit back.</string>
    <string name="withdraw_tip_unbind">Withdraw after unbinding miner.</string>
    <string name="withdraw_tip_unlock">You can get back the deposit after unlocking.</string>
    <string name="unlock">Unlock</string>
    <string name="unlocking">Unlocking, pleas wait...</string>
    <string name="unlock_success">Unlock success</string>
    <string name="unlock_failed">Unlock failed</string>
    <string name="go_unbind">Go unbinding</string>
    <string name="go_bind">Go binding</string>
    <string name="no_deposit">Have not deposited</string>
    <string name="required_camera_permission">Please check camera permission in settings</string>
    <string name="scanner_title">scan</string>
    <string name="scanner_tip">Please aim the lens at the QR code for scanning</string>
    <string name="register_device">Register device</string>
    <string name="register_authoring">Authorizing...</string>
    <string name="register_transferring">Transferring...</string>
    <string name="register_locking">Locking up...</string>
    <string name="register_auth">①Authorize</string>
    <string name="register_transfer"> → ②Transfer</string>
    <string name="register_lock"> → ③Lock up</string>
    <string name="register_auth_tip">Author ARP to contract, cost no ARP</string>
    <string name="register_transfer_tip">Transfer 500ARP for locking up</string>
    <string name="register_lock_tip">Lock up the 500ARP transferred last step</string>
    <string name="register_transfer_amount">Transfer</string>
    <string name="register_lock_amount">Lock up(cost no ARP)</string>
    <string name="register_total_amount">total %.2f ARP</string>
    <string name="register_token_amount">%s ARP</string>
    <string name="register_cost_amount">- 500 ARP</string>
    <string name="register_insufficient_balance">Insufficient balance of ARP</string>
    <string name="register_underpaid">Not enough ether for gas fee</string>
    <string name="register_cost_token">ARP</string>
    <string name="register_gas">ETH gas</string>
    <string name="register_gas_value_without_yuan">%.6f ether</string>
    <string name="register_gas_value">%.6f ether ≈ ￥ %.2f</string>
    <string name="register_password">Password</string>
    <string name="register_password_tip">Enter password</string>
    <string name="register_next_step">Next step</string>
    <string name="register_finished">Finish</string>
    <string name="miner_list">Miner list</string>
    <string name="bind_tip">Miners promises that you can get rewards no more than the authorized amount by taking orders within a limited time. \n(Time limits and the authorized amount could increase automatically due to the specific situation)</string>
    <string name="bind_miner_address">Miner address</string>
    <string name="bind_author_time">Time</string>
    <string name="bind_author_amount">Amount</string>
    <string name="remaining_amount">Remaining amount</string>
    <string name="binding_other">Binding other miner</string>
    <string name="unbinding_other">Unbinding other miner</string>
    <string name="binding">Binding, please wait</string>
    <string name="unbinding">Unbinding, please wait</string>
    <string name="remaining_detail">Remaining of authorized amount. When remaining amount is near zero, device could not start ordering.</string>
    <string name="bind_miner">Bind miner</string>
    <string name="unbind_miner">Unbind miner</string>
    <string name="bind_hint">Choose a miner to make matches</string>
    <string name="bind_success">Bind success</string>
    <string name="bind_running">Bind is in process</string>
    <string name="bind_failed">Bind miner failed,please try again</string>
    <string name="unexchanged">Unexchanged:%.2f ARP</string>
    <string name="exchanged_records">Exchanged records</string>
    <string name="exchange_arp">Exchange ARP</string>
    <string name="exchange_arp_amount">+ %.2f ARP</string>
    <string name="exchange_total_amount">total %.2f ARP</string>
    <string name="exchange">Exchange</string>
    <string name="cashing">Exchanging, pleas wait...</string>
</resources>