<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/PlainLayout"
        android:layout_marginTop="@dimen/plain_margin">

        <LinearLayout style="@style/PlainItemLayout">

            <TextView
                style="@style/MyWalletTitleLabel"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/wallet_addr" />

            <TextView
                android:id="@+id/tv_addr"
                style="@style/MyWalletAddressLabel" />
        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout style="@style/PlainItemLayout">

            <TextView
                style="@style/MyWalletTitleLabel"
                android:text="@string/ETH_balance" />

            <TextView
                android:id="@+id/tv_eth_balance"
                style="@style/MyWalletInfoLabel"
                android:text="@string/loading_balance" />
        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout style="@style/PlainItemLayout">

            <TextView
                style="@style/MyWalletTitleLabel"
                android:text="@string/ARP_balance" />

            <TextView
                android:id="@+id/tv_arp_balance"
                style="@style/MyWalletInfoLabel"
                android:text="@string/loading_balance" />
        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:id="@+id/ll_deposit"
            style="@style/PlainItemLayout">

            <TextView
                style="@style/MyWalletTitleLabel"
                android:text="@string/wallet_deposit" />

            <TextView
                android:id="@+id/tv_deposit"
                style="@style/MyWalletInfoLabel"
                android:layout_weight="1"
                android:text="@string/loading_balance" />

            <ImageView style="@style/Arrow" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_reset"
        style="@style/ButtonOrange"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/plain_margin"
        android:text="@string/reset_wallet" />

</RelativeLayout>