<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background_light_gray">

    <LinearLayout
        android:id="@+id/ll_exchange"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="17dp">

            <TextView
                android:id="@+id/tv_amount_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/exchange_arp"
                android:textColor="@color/register_title_text_color" />

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/exchange_total_amount"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <View
                style="@style/Divider"
                android:layout_marginLeft="@dimen/register_margin"
                android:layout_marginRight="@dimen/register_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/register_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/register_cost_token"
                    android:textColor="@color/register_title_text_color" />

                <TextView
                    android:id="@+id/tv_exchange_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/exchange_arp_amount"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>

        <org.arpnetwork.arpdevice.ui.view.GasFeeView
            android:id="@+id/ll_gas_fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/register_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_password"
                android:textColor="@color/register_title_text_color" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/register_password_tip"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:paddingTop="20dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />

            <View style="@style/Divider" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_exchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/register_margin"
            android:background="@color/colorPrimary"
            android:text="@string/exchange"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/window_background_layer"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/progress_view_background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/register_margin">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateTint="@android:color/white" />

            <TextView
                android:id="@+id/tv_progress_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/cashing"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tips_text_size" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>