<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_corner_bg"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/input_passwd_tip"
        android:inputType="textPassword"
        android:paddingBottom="30dp"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        android:paddingTop="30dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray"
        android:textSize="15sp" />

    <View style="@style/Divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/spacer_medium"
        android:gravity="center"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>