<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="@dimen/content_padding"
    android:paddingRight="@dimen/content_padding"
    android:paddingTop="@dimen/content_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_bg_green"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="23dp">

        <LinearLayout
            android:id="@+id/layout_wallet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_unexchanged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/exchange" />

            <TextView
                android:id="@+id/tv_exchanged"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/unexchanged"
                android:textColor="@android:color/white"
                android:textSize="11sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_exchange"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/btn_bg_white"
            android:textAllCaps="false"
            android:text="@string/exchange"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exchanged_records"
        android:layout_marginTop="30dp"
        android:textColor="#838383"
        android:textSize="11sp" />
</LinearLayout>